# audio-segmentation

./: NOTES.md  README.md  pyproject.toml
examples/: aligner_example.py  canary_segment.py  example.py  example_verifier.py  nemo_example.py  parakeet_segment.py  whisper_timestamped_segment.py  whisperx_segment.py
experimental/: canary.py
src/audio_segmentation/: __init__.py  refine.py  segment.py  segmenter.py  transcribe.py  utility.py
src/audio_segmentation/aligner/: __init__.py  aligner.py  torchaudio.py
src/audio_segmentation/transcriber/: nemo.py  parakeet.py  transcriber.py  whisper_timestamped.py  whisperx.py
src/audio_segmentation/types/: __init__.py  audio.py  segment.py  transcription.py
src/audio_segmentation/verifiers/: profile.py  speaker.py  speechbrain.py  verifier.py
tests/: conftest.py  test_aligner.py  test_parakeet.py  test_refinement.py  test_sentence_segmenter.py  test_speaker.py  test_transcribe.py  test_verifier.py
tests/fixtures/: transcription_result.json
tests/transcribers/: test_nemo.py  test_whisper_timestamped.py  test_whisperx.py
tests/types/: test_audio.py
