[project]
name = "audio-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "pydub>=0.25.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[project.optional-dependencies]
nemo = [
    "cuda-python>=12.9.0",
    "nemo-toolkit[asr]>=2.2.1",
]
whisperx = [
    "whisperx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv.sources]
whisperx = { git = "https://github.com/jspaulsen/whisperx.git" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
