[project]
name = "audio-segmentation"
version = "0.6.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "nltk>=3.9.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[project.optional-dependencies]
nemo = [
    "cuda-python>=12.9.0",
    "nemo-toolkit[asr]>=2.2.1",
]
whisperx = [
    "whisperx",
]
diarization = [
    "speechbrain>=1.0.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
whisperx = { git = "https://github.com/jspaulsen/whisperx.git" }
